infrastructure/kubernetes/production/workers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workers 
  labels: 
    application: communities
    function: workers 
    environment: production
spec:
  selector:
    matchLabels:
      application: communities
      function: workers 
      environment: production
  replicas: 2
  template: 
    metadata:
      name: communities-workers-pod-template
      labels:
        application: communities
        function: workers 
        environment: production
        container: worker 
    spec:
      terminationGracePeriodSeconds: 600 
      volumes:
        - name: workspace
          emptyDir:
            sizeLimit: 200M
        - name: push-notification-secrets 
          secret:
            secretName: communities-push-notification-secrets
      containers:
        - name: workers-container
          image: 843012963492.dkr.ecr.us-east-1.amazonaws.com/communities/worker:0.6.0
          resources:
            requests:
              cpu: 200m
              memory: 200M
          volumeMounts:
            - mountPath: '/src/tmp'
              name: workspace
            - mountPath: '/src/security/'
              name: push-notification-secrets
