infrastructure/kubernetes/production/web-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-application 
  labels: 
    application: communities
    function: frontend-and-api 
    environment: production
spec:
  selector:
    matchLabels:
      application: communities
      function: frontend-and-api 
      environment: production
  replicas: 2
  template: 
    metadata:
      name: web-application-pod-template
      labels:
        application: communities
        function: frontend-and-api 
        environment: production
        container: web-application 
    spec:
      terminationGracePeriodSeconds: 70
      containers:
        - name: web-application-container
          image: 843012963492.dkr.ecr.us-east-1.amazonaws.com/communities/web-application:0.2.1
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 40"]
          startupProbe:
            httpGet:
              path: /health
              port: 3000
            periodSeconds: 3 
            failureThreshold: 20
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            failureThreshold: 1
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web-application-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:us-east-1:843012963492:certificate/e4b907cc-3386-4ad9-aa75-91457fbee92b
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '10'
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-port: '3000'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  type: NodePort 
  selector:
    application: communities
    function: frontend-and-api
    environment: production
  ports:
    - name: http
      protocol: TCP
      port: 80 
      targetPort: 3000
    - name: https
      protocol: TCP
      port: 443 
      targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-application-ingress 
  labels:
    application: communities
    function: frontend-and-api
    environment: production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: web-application-production
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:843012963492:certificate/e4b907cc-3386-4ad9-aa75-91457fbee92b" 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=10
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true
spec:
  ingressClassName: alb
  rules:
  - host: communities.social
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: web-application-service
            port: 
              number: 80
